--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ button {
     border: 2px solid var(--outline);
     border-radius: 0.5em;
     padding: 0.5em;
+    height: 1em;
 }
 
 .calc-grid {
