--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ button {
     border: 2px solid var(--outline);
     background-color: var(--white);
     border-radius: 0.5em;
+    font-size: large;
+}
 }
 
 .result-bar {
