--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 :root {
     --white: hsl(0, 0%, 95%);
+    --hover-colour: hsl(0, 0%, 90%);
+    --click-colour: hsl(0, 0%, 70%);
     --outline: #0E6251;
 }
 
@@ -25,6 +27,13 @@ button {
     border-radius: 0.5em;
     font-size: large;
 }
+
+button:hover {
+    background-color: var(--hover-colour);
+}
+
+button:active {
+    background-color: var(--click-colour);
 }
 
 .result-bar {
