--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
-    --white: hsl(0, 0%, 95%);
-    --hover-colour: hsl(0, 0%, 90%);
-    --click-colour: hsl(0, 0%, 70%);
+    --white: hsl(210, 100%, 98%);
+    --hover-colour: hsl(210, 100%, 90%);
+    --click-colour: hsl(210, 100%, 70%);
     --outline: #0E6251;
 }
 
@@ -22,10 +22,15 @@ body {
 
 button {
     padding: 1em;
-    border: 2px solid var(--outline);
+    color: var(--outline);
+    border: 1px solid var(--outline);
     background-color: var(--white);
     border-radius: 0.5em;
     font-size: large;
+}
+
+.operator, #c {
+    background-color: hsl(210, 100%, 95%);
 }
 
 button:hover {
@@ -38,9 +43,10 @@ button:active {
 
 .result-bar {
     background-color: var(--white);
+    color: var(--outline);
     text-align: right;
     grid-column: 1 / 5;
-    border: 2px solid var(--outline);
+    border: 1px solid var(--outline);
     border-radius: 0.5em;
     padding: 0.5em;
     height: 1em;
